force-app/main/default/objects/Contract/fields/Accreditation_Endorser__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Endorser__c</fullName>
    <label>Accreditation Endorser:</label>
    <length>120</length>
    <type>Text</type>
</CustomField>