force-app/main/default/objects/Contract/fields/Age_group_you_work_with__c.field-meta.xml
<CustomField>
    <fullName>Age_group_you_work_with__c</fullName>
    <label>Age group you work with:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elementary</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>