force-app/main/default/objects/Contract/fields/Company_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Mailing_Address__c</fullName>
    <label>Company Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>