force-app/main/default/objects/Contract/fields/Paying_with_a_company_credit_card__c.field-meta.xml
<CustomField>
    <fullName>Paying_with_a_company_credit_card__c</fullName>
    <label>Paying with a company credit card?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>