force-app/main/default/objects/Contract/fields/Program_Address__c.field-meta.xml
<CustomField>
    <fullName>Program_Address__c</fullName>
    <label>Program Address:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>