force-app/main/default/objects/Contract/fields/SAC_Advisor_Endorser_Serving__c.field-meta.xml
<CustomField>
    <fullName>SAC_Advisor_Endorser_Serving__c</fullName>
    <label>SAC Advisor/Endorser Serving:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital Region</fullName>
            </value>
            <value>
                <fullName>Hudson Valley</fullName>
            </value>
            <value>
                <fullName>Utica</fullName>
            </value>
            <value>
                <fullName>Watertown</fullName>
            </value>
            <value>
                <fullName>North Country</fullName>
            </value>
            <value>
                <fullName>Syracuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>