force-app/main/default/objects/Contract/fields/SAC_Advisor_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>SAC_Advisor_Renewal_Date__c</fullName>
    <label>SAC Advisor Renewal Date:</label>
    <type>Date</type>
</CustomField>