force-app/main/default/objects/Contract/fields/SAC_Credential_Instructor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Credential_Instructor__c</fullName>
    <label>SAC Credential Instructor:</label>
    <length>120</length>
    <type>Text</type>
</CustomField>