force-app/main/default/objects/Contract/fields/SAC_Endorser_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>SAC_Endorser_Renewal_Date__c</fullName>
    <label>SAC Endorser Renewal Date:</label>
    <type>Date</type>
</CustomField>