force-app/main/default/objects/Contract/fields/Staff_Level__c.field-meta.xml
<CustomField>
    <fullName>Staff_Level__c</fullName>
    <label>Staff Level:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>